# Focused-Moment

./: .gitignore  AGENTS.md  AI功能使用说明.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-v0.9.0.md  README.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.9.0.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  v0.9.0-UI增强说明.md  v0.9.0-明日方舟抽卡系统-使用说明.md  vite.config.js  启动开发环境.bat  复制可执行文件.bat  完全重建.bat  最终交付说明.md  最终说明.md  构建应用.bat  测试指南-v0.12.0.md  解决连接错误.md  诊断问题.bat  重要说明.md
docs/: 用户反馈.md
scripts/: build-content-pack.mjs  cleanup-build-artifacts.ps1  cleanup-exe.mjs  export-build-artifacts.ps1  export-debug-exe.ps1  publish-content-pack.ps1  (+5 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test_probability.rs
src-tauri/capabilities/: default.json
src-tauri/content/: focused-moment-content-cn-pack.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/gacha/: probability.txt
src-tauri/src/: config.rs  config_test.rs  headhunt_catalog.rs  lib.rs  main.rs  runtime.rs  storage.rs  windows.rs
src-tauri/src/ai/: mod.rs  tests.rs
src-tauri/src/gacha/: MIGRATION.md  PROBABILITY_IMPLEMENTATION.md  README.md  SINGLE_PULL_IMPLEMENTATION.md  TEN_PULL_IMPLEMENTATION.md  database.rs  mod.rs  models.rs  probability.rs  single_pull.rs  ten_pull.rs
src-tauri/src/operator/: elite.rs  mod.rs  upgrade.rs
src-tauri/src/resources/: manager.rs  mod.rs
src-tauri/src/timer/: mod.rs  rewards.rs
src-tauri/tests/: single_gacha_integration_test.rs  ten_gacha_integration_test.rs
(+60 files in other folders)
