[package]
name = "focused-moment"
version = "0.5.0"
description = "Focused Moment focused desktop assistant"
authors = ["zhulongqihan"]
edition = "2021"

[lib]
name = "focused_moment_lib"
path = "src/runtime.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
