[package]
name = "focused-moment"
version = "1.1.0"
description = "Focused Moment focused desktop assistant"
authors = ["zhulongqihan"]
edition = "2021"

[lib]
name = "focused_moment_lib"
path = "src/runtime.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
